[gd_scene load_steps=16 format=2]

[ext_resource path="res://fonts/droid-sans/DroidSans.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/DifficultyButtons.gd" type="Script" id=2]
[ext_resource path="res://audio/select_button_hard.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/select_button_medium.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/select_button_easy.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/select_button_ultra.wav" type="AudioStream" id=6]
[ext_resource path="res://themes/vrworkout_theme.theme" type="Theme" id=7]
[ext_resource path="res://scripts/ConnectPadInput.gd" type="Script" id=8]
[ext_resource path="res://scripts/TouchableViewport.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.380392, 0.298039, 0.831373, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 2.217, 4 )

[sub_resource type="ViewportTexture" id=4]
flags = 12
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = SubResource( 4 )

[sub_resource type="BoxShape" id=6]
margin = 0.001
extents = Vector3( 1.109, 0.05, 2 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 204, 368 )
transparent_bg = true
msaa = 6
render_target_v_flip = true
render_target_update_mode = 1
script = ExtResource( 9 )

[node name="CanvasLayer" type="CanvasLayer" parent="Viewport"]

[node name="Panel" type="Panel" parent="Viewport/CanvasLayer"]
margin_right = 204.0
margin_bottom = 368.0
theme = ExtResource( 7 )

[node name="Easy" type="Button" parent="Viewport/CanvasLayer"]
margin_left = 105.0
margin_top = 4.0
margin_right = 197.0
margin_bottom = 54.0
theme = ExtResource( 7 )
text = "Easy"

[node name="Active" type="ColorRect" parent="Viewport/CanvasLayer/Easy"]
margin_left = 6.0
margin_top = 40.0
margin_right = 86.0
margin_bottom = 45.0
color = Color( 0.94902, 1, 0.0745098, 1 )

[node name="Medium" type="Button" parent="Viewport/CanvasLayer"]
margin_left = 105.0
margin_top = 74.0
margin_right = 197.0
margin_bottom = 124.0
theme = ExtResource( 7 )
text = "Medium"

[node name="Active" type="ColorRect" parent="Viewport/CanvasLayer/Medium"]
margin_left = 6.0
margin_top = 40.0
margin_right = 86.0
margin_bottom = 45.0
color = Color( 0.94902, 1, 0.0745098, 1 )

[node name="Hard" type="Button" parent="Viewport/CanvasLayer"]
margin_left = 105.0
margin_top = 144.0
margin_right = 197.0
margin_bottom = 194.0
theme = ExtResource( 7 )
text = "Hard"

[node name="Active" type="ColorRect" parent="Viewport/CanvasLayer/Hard"]
margin_left = 6.0
margin_top = 40.0
margin_right = 86.0
margin_bottom = 45.0
color = Color( 0.94902, 1, 0.0745098, 1 )

[node name="Auto" type="Button" parent="Viewport/CanvasLayer"]
margin_left = 105.0
margin_top = 214.0
margin_right = 197.0
margin_bottom = 264.0
theme = ExtResource( 7 )
text = "Auto"

[node name="Active" type="ColorRect" parent="Viewport/CanvasLayer/Auto"]
margin_left = 6.0
margin_top = 40.0
margin_right = 86.0
margin_bottom = 45.0
color = Color( 0.94902, 1, 0.0745098, 1 )

[node name="Ultra" type="Button" parent="Viewport/CanvasLayer"]
margin_left = 105.0
margin_top = 314.0
margin_right = 197.0
margin_bottom = 364.0
theme = ExtResource( 7 )
text = "Ultra"

[node name="Active" type="ColorRect" parent="Viewport/CanvasLayer/Ultra"]
margin_left = 6.0
margin_top = 40.0
margin_right = 86.0
margin_bottom = 45.0
color = Color( 0.94902, 1, 0.0745098, 1 )

[node name="Control" type="Control" parent="Viewport/CanvasLayer"]
margin_left = 5.0
margin_right = 45.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Viewport/CanvasLayer/Control"]
margin_left = 46.0
margin_top = 46.0
margin_right = 49.0
margin_bottom = 342.0

[node name="Plus" type="Button" parent="Viewport/CanvasLayer/Control"]
margin_top = 4.0
margin_right = 90.0
margin_bottom = 50.0
theme = ExtResource( 7 )
text = "+"

[node name="Minus" type="Button" parent="Viewport/CanvasLayer/Control"]
margin_top = 318.0
margin_right = 90.0
margin_bottom = 364.0
theme = ExtResource( 7 )
text = "-"

[node name="Label" type="Label" parent="Viewport/CanvasLayer/Control"]
margin_top = 100.0
margin_right = 90.0
margin_bottom = 141.0
theme = ExtResource( 7 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Target Heartrate
80"
align = 1
autowrap = true

[node name="StaticBody" type="StaticBody" parent="."]
script = ExtResource( 8 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 3 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0339105, 0 )
shape = SubResource( 6 )

[node name="tl_marker" type="Spatial" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.109, 0, -2 )

[node name="bl_marker" type="Spatial" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.109, 0, 2 )

[node name="tr_marker" type="Spatial" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.109, 0, -2 )

[node name="SoundEasy" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="SoundMedium" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SoundHard" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="SoundUltra" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="SoundAuto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="Viewport/CanvasLayer/Easy" to="." method="_on_Easy_pressed" binds= [ "easy" ]]
[connection signal="pressed" from="Viewport/CanvasLayer/Medium" to="." method="_on_Medium_pressed" binds= [ "medium" ]]
[connection signal="pressed" from="Viewport/CanvasLayer/Hard" to="." method="_on_Hard_pressed" binds= [ "hard" ]]
[connection signal="pressed" from="Viewport/CanvasLayer/Auto" to="." method="_on_Auto_pressed" binds= [ "auto" ]]
[connection signal="pressed" from="Viewport/CanvasLayer/Ultra" to="." method="_on_Ultra_pressed" binds= [ "ultra" ]]
[connection signal="pressed" from="Viewport/CanvasLayer/Control/Plus" to="." method="_on_Plus_pressed"]
[connection signal="pressed" from="Viewport/CanvasLayer/Control/Minus" to="." method="_on_Minus_pressed"]
[connection signal="interface_release" from="StaticBody" to="Viewport" method="_on_ConnectPadInput_interface_release"]
[connection signal="interface_touch" from="StaticBody" to="Viewport" method="_on_ConnectPadInput_interface_touch"]
